--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -52,8 +52,21 @@
    "source": [
     "# TODO\n",
     "\n",
-    "# 1. Create summaries\n",
-    "# 2. Input pipeline - lots of work!!!!"
+    "# what is done:\n",
+    "# working resnet model in tensorflow\n",
+    "\n",
+    "# what needs work:\n",
+    "# 1. Create summaries - need to figure out what metrics are needed. \n",
+    "# print out images from each block\n",
+    "# testing accuracy vs step, training accuracy vs. step, loss vs step\n",
+    "# ROC, AUC\n",
+    "\n",
+    "# 2. Input pipeline - lots of work! Best way is to .csv files of image directories and work with that\n",
+    "\n",
+    "# 3. Loss & Accuracy calculations need to be reviewed after bringing in new input pipeline\n",
+    "\n",
+    "# https://www.tensorflow.org/guide/datasets - figuring out how to import data\n",
+    "# https://www.tensorflow.org/guide/summaries_and_tensorboard - "
    ]
   },
   {
@@ -224,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -236,19 +249,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss:  2.3567808\n",
+      "loss:  2.3339803\n",
       "accuracy: 0.00%\n",
-      "loss:  1.8635734\n",
+      "loss:  1.8716917\n",
+      "accuracy: 0.00%\n",
+      "loss:  1.4372344\n",
+      "accuracy: 10.00%\n",
+      "loss:  1.0473524\n",
       "accuracy: 20.00%\n",
-      "loss:  1.4043481\n",
-      "accuracy: 20.00%\n",
-      "loss:  0.9911682\n",
-      "accuracy: 40.00%\n",
-      "loss:  0.61691725\n",
-      "accuracy: 50.00%\n",
-      "loss:  0.3463279\n",
-      "accuracy: 30.00%\n",
-      "accuracy: 100.00%\n"
+      "loss:  0.766644\n",
+      "accuracy: 10.00%\n",
+      "loss:  0.52056295\n",
+      "accuracy: 10.00%\n",
+      "accuracy: 98.00%\n"
      ]
     }
    ],
