--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -53,7 +53,7 @@
     "# TODO\n",
     "\n",
     "# what is done:\n",
-    "# working resnet model in tensorflow\n",
+    "# partially done resnet model in tensorflow\n",
     "\n",
     "# what needs work:\n",
     "# 1. Create summaries - need to figure out what metrics are needed. \n",
