need to fix cmunet graph

--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -14,10 +14,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.9.0\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-cabbed2433b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhorovod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhvd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
      ]
     }
    ],
@@ -25,9 +29,9 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import os\n",
-    "#import horovod.tensorflow as hvd\n",
+    "import horovod.tensorflow as hvd\n",
     "\n",
-    "\n",
+    "hvd.init()\n",
     "print(tf.__version__)"
    ]
   },
@@ -208,69 +212,96 @@
     "batch = tf.placeholder(dtype=tf.int64, shape=None, name='batch')\n",
     "\n",
     "with tf.variable_scope(\"conv1\", reuse=tf.AUTO_REUSE):\n",
-    "  layer = conv2D(layer=x, ft_size=64, name='_1', ksize=7, strides=[1, 2, 2, 1])\n",
+    "    layer = conv2D(layer=x, ft_size=64, name='_1', ksize=7, strides=[1, 2, 2, 1])\n",
     "\n",
     "resnet_layer = layer\n",
     "\n",
     "with tf.variable_scope(\"conv2\", reuse=tf.AUTO_REUSE):\n",
-    "  layer = tf.nn.max_pool(value=layer, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1], padding='SAME', name='max_pool')\n",
-    "  for i in range(3):\n",
-    "    with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
-    "      layer = conv2D(layer, 64, '_0')\n",
-    "      layer = conv2D(layer, 64, '_1', ksize=3)\n",
-    "      layer = conv2D(layer, 256, '_2')\n",
+    "    layer = tf.nn.max_pool(value=layer, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1], padding='SAME', name='max_pool')\n",
+    "    for i in range(3):\n",
+    "        with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
+    "            layer = conv2D(layer, 64, '_0')\n",
+    "            layer = conv2D(layer, 64, '_1', ksize=3)\n",
+    "            layer = conv2D(layer, 256, '_2')\n",
     "\n",
     "resnet_layer = respath_fn(resnet_layer, layer, '_0')\n",
     "layer = resnet_layer\n",
     "\n",
     "with tf.variable_scope(\"conv3\", reuse=tf.AUTO_REUSE):      \n",
-    "  for i in range(4):\n",
-    "    with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
-    "      layer = conv2D(layer, 128, '_0')\n",
-    "      layer = conv2D(layer, 128, '_1', ksize=3)\n",
-    "      layer = conv2D(layer, 512, '_2')\n",
+    "    for i in range(4):\n",
+    "        with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
+    "            layer = conv2D(layer, 128, '_0')\n",
+    "            layer = conv2D(layer, 128, '_1', ksize=3)\n",
+    "            layer = conv2D(layer, 512, '_2')\n",
     "\n",
     "resnet_layer = respath_fn(resnet_layer, layer, '_1')\n",
     "layer = resnet_layer\n",
     "    \n",
     "with tf.variable_scope(\"conv4\", reuse=tf.AUTO_REUSE): \n",
-    "  for i in range(6):\n",
-    "    with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
-    "      layer = conv2D(layer, 256, '_0')\n",
-    "      layer = conv2D(layer, 256, '_1', ksize=3)\n",
-    "      layer = conv2D(layer, 1024, '_2')\n",
+    "    for i in range(6):\n",
+    "        with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
+    "            layer = conv2D(layer, 256, '_0')\n",
+    "            layer = conv2D(layer, 256, '_1', ksize=3)\n",
+    "            layer = conv2D(layer, 1024, '_2')\n",
     "\n",
     "resnet_layer = respath_fn(resnet_layer, layer, '_2')\n",
     "layer = resnet_layer\n",
     "\n",
     "with tf.variable_scope(\"conv5\", reuse=tf.AUTO_REUSE): \n",
-    "  for i in range(3):\n",
-    "    with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
-    "      layer = conv2D(layer, 512, '_0')\n",
-    "      layer = conv2D(layer, 512, '_1', ksize=3)\n",
-    "      layer = conv2D(layer, 2048, '_2')\n",
+    "    for i in range(3):\n",
+    "        with tf.variable_scope(\"block_\"+str(i), reuse=tf.AUTO_REUSE):\n",
+    "            layer = conv2D(layer, 512, '_0')\n",
+    "            layer = conv2D(layer, 512, '_1', ksize=3)\n",
+    "            layer = conv2D(layer, 2048, '_2')\n",
     "\n",
     "with tf.variable_scope(\"output\", reuse=tf.AUTO_REUSE):      \n",
-    "  layer = tf.nn.avg_pool(value=layer, ksize=[1, 3, 3, 1], strides=[1, 1, 1, 1], padding='SAME', name='avg_pool')\n",
-    "#   layer = tf.contrib.layers.fully_connected(layer, 1000)\n",
-    "  layer = tf.contrib.layers.flatten(layer)\n",
-    "  w_loss = tf.get_variable(name='w', shape=[layer.shape[1], NUM_CLASS], dtype=tf.float32, initializer=tf.variance_scaling_initializer(factor=1.0, mode='FAN_IN'))\n",
-    "  b_loss = tf.get_variable(name='b', shape=[NUM_CLASS], dtype=tf.float32, initializer=tf.zeros_initializer())\n",
-    "  layer = tf.matmul(layer, w_loss) + b_loss\n",
+    "    layer = tf.nn.avg_pool(value=layer, ksize=[1, 3, 3, 1], strides=[1, 1, 1, 1], padding='SAME', name='avg_pool')\n",
+    "    #   layer = tf.contrib.layers.fully_connected(layer, 1000)\n",
+    "    layer = tf.contrib.layers.flatten(layer)\n",
+    "    w_loss = tf.get_variable(name='w', shape=[layer.shape[1], NUM_CLASS], dtype=tf.float32, initializer=tf.variance_scaling_initializer(factor=1.0, mode='FAN_IN'))\n",
+    "    b_loss = tf.get_variable(name='b', shape=[NUM_CLASS], dtype=tf.float32, initializer=tf.zeros_initializer())\n",
+    "    layer = tf.matmul(layer, w_loss) + b_loss\n",
     "\n",
     "with tf.variable_scope(\"loss\", reuse=tf.AUTO_REUSE):\n",
-    "  global_step = tf.train.get_or_create_global_step()\n",
-    "  loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=tf.one_hot(y, 10), logits=layer))\n",
-    "  optimize = tf.train.AdamOptimizer(learning_rate=1e-5).minimize(loss, global_step=global_step)\n",
-    " # optimize = hvd.DistributedOptimizer(optimize)\n",
+    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=tf.one_hot(y, 10), logits=layer))\n",
+    "  \n",
+    "    hooks = [hvd.BroadcastGlobalVariablesHook(0)]\n",
+    "    #Add session stop hook\n",
+    "    global_step = tf.train.get_or_create_global_step()\n",
+    "    hooks.append(tf.train.StopAtStepHook(last_step=num_steps_total))\n",
+    "\n",
+    "    optimize = tf.train.AdamOptimizer(learning_rate=1e-5)\n",
+    "    optimize = hvd.DistributedOptimizer(optimize).minimize(loss, global_step=global_step)\n",
     "\n",
     "with tf.variable_scope(\"accuracy\", reuse=tf.AUTO_REUSE):     \n",
-    "  softmax = tf.argmax(tf.nn.softmax(logits=layer, axis=1), axis=1)\n",
-    "  accuracy = tf.reduce_mean(tf.cast(tf.equal(softmax, y), tf.float32))*100\n",
+    "    softmax = tf.argmax(tf.nn.softmax(logits=layer, axis=1), axis=1)\n",
+    "    accuracy = tf.reduce_mean(tf.cast(tf.equal(softmax, y), tf.float32))*100\n",
     "\n",
     "saver = tf.train.Saver()  \n",
     "    \n",
     "print(layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Save checkpoints only on worker 0 to prevent other workers from corrupting them.\n",
+    "checkpoint_dir = '/tmp' if hvd.rank() == 0 else None\n",
+    "\n",
+    "# The MonitoredTrainingSession takes care of session initialization,\n",
+    "# restoring from a checkpoint, saving to a checkpoint, and closing when done\n",
+    "# or an error occurs.\n",
+    "with tf.train.MonitoredTrainingSession(checkpoint_dir=checkpoint_dir, hooks=hooks) as mon_sess:\n",
+    "    while not mon_sess.should_stop():\n",
+    "        # Perform synchronous training.\n",
+    "        mon_sess.run(optimize)\n",
+    "        if hvd.rank() == 0:\n",
+    "            current_loss = mon_sess.run(loss)\n",
+    "            print(\"loss: \", current_loss)\n"
    ]
   },
   {
@@ -314,6 +345,7 @@
     "# config = tf.ConfigProto()\n",
     "# config.gpu_options.allow_growth = True\n",
     "\n",
+    "\n",
     "with tf.Session(config=config) as sess:\n",
     "  \n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -345,36 +377,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-851075204988>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-851075204988>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    a = np.zeros([32:d.shape[0], np.amax([d.shape[1], z.shape[1]]), np.amax([d.shape[2], z.shape[2]]), np.amax([d.shape[3], z.shape[3]])])\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = np.ones([16, 32, 32, 64])\n",
-    "z = np.ones([16, 28, 28, 128])\n",
-    "\n",
-    "np.amax([d.shape[1], z.shape[1]])\n",
-    "\n",
-    "a = np.zeros([d.shape[0], np.amax([d.shape[1], z.shape[1]]), np.amax([d.shape[2], z.shape[2]]), np.amax([d.shape[3], z.shape[3]])])\n",
-    "b = np.zeros(a.shape)\n",
-    "print(b.shape)\n",
-    "\n",
-    "a[:d.shape[0], :d.shape[1], :d.shape[2], :d.shape[3]] = d\n",
-    "b[:z.shape[0], :z.shape[1], :z.shape[2], :z.shape[3]] = z\n",
-    "\n",
-    "ret = np.add(a, b).shape\n"
-   ]
   },
   {
    "cell_type": "code",
@@ -411,5 +413,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
